CSS fix for text overflow; sending message 'Email not verified' instead of 401.2 since express does not support fractional status code.

--- a/MyCloudCode/src/less/signin_page.less
+++ b/MyCloudCode/src/less/signin_page.less
@@ -11,6 +11,7 @@
 	text-shadow: 2px 1px #050505;
 	margin: 1em auto;
 	text-align: center;
+	overflow: hidden;
 }
 
 .wechat-welcome-message {
